--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -76,7 +76,7 @@
 	}
 
 	body {
-		background: #202024;
+		background: #7979eb;
 	}
 
 		body.is-loading *, body.is-loading *:before, body.is-loading *:after {
